# flask-calendar-integration

./: .gitignore  README.md  app.py  main.py  pyproject.toml
app/api/calendar/: google_calendar.py
app/api/config/: swagger_config.py
app/api/controllers/: google_calendar.py
app/api/db/: db.py  init_db.py
app/api/models/: token_storage.py  user.py
app/api/routers/: example.py
app/api/routers/calendar/: google_authorization.py  google_calendar.py
app/api/routers/users/: login.py
app/api/schemas/: request_schema.py  response_schema.py
app/tests/: conftest.py  test_authorization.py  test_calendar_controller.py
