[tool.poetry]
name = "flask schedule"
version = "0.1.0"
description = ""
authors = ["Diana Perugia Baiadori <diana.baiadori@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-restful = "^0.3.9"
flask-apispec = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
